--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
         >
         <text style="padding-bottom: 0.5cm">输入视频</text>
         <video
-          src="https://github.com/Frozen-hc/Frozen-hc.github.io/blob/main/cell_0.mp4"
+          src="cell_0.mp4"
           controls="controls"
           width="430px"
           height="323px"
@@ -57,7 +57,7 @@
           </text>
 
           <video
-            src="https://github.com/Frozen-hc/Frozen-hc.github.io/blob/main/cell_a1.mp4"
+            src="cell_a1.mp4"
             controls="controls"
             width="430px"
             height="323px"
@@ -71,7 +71,7 @@
           </text>
 
           <video
-            src="https://github.com/Frozen-hc/Frozen-hc.github.io/blob/main/cell_b1.mp4"
+            src="cell_b1.mp4"
             controls="controls"
             width="430px"
             height="323px"
@@ -85,7 +85,7 @@
           </text>
 
           <video
-            src="https://github.com/Frozen-hc/Frozen-hc.github.io/blob/main/cell_c1.mp4"
+            src="cell_c1.mp4"
             controls="controls"
             width="430px"
             height="323px"
@@ -101,7 +101,7 @@
           </text>
 
           <video
-            src="https://github.com/Frozen-hc/Frozen-hc.github.io/blob/main/cell_a2.mp4"
+            src="cell_a2.mp4"
             controls="controls"
             width="430px"
             height="323px"
@@ -115,7 +115,7 @@
           </text>
 
           <video
-            src="https://github.com/Frozen-hc/Frozen-hc.github.io/blob/main/cell_b2.mp4"
+            src="cell_b2.mp4"
             controls="controls"
             width="430px"
             height="323px"
@@ -129,7 +129,7 @@
           </text>
 
           <video
-            src="https://github.com/Frozen-hc/Frozen-hc.github.io/blob/main/cell_c2.mp4"
+            src="cell_c2.mp4"
             controls="controls"
             width="430px"
             height="323px"
