--- a/index.html
+++ b/index.html
@@ -62,6 +62,9 @@
           style="font-size: 24px; padding-top: 2.7cm"
           >查看视频</a
         >
+                <text style="font-size: 16px; padding-top: 4cm"
+          >图片较大，请求较慢。<br/>请稍等片刻或查看视频。</text
+        >
       </div>
       <div class="video-container col">
         <div class="inner-container" style="padding-bottom: 0.2cm">
